feat: update index.html

--- a/index.html
+++ b/index.html
@@ -12,18 +12,68 @@
           height: 100%;
         }
         .container {
+          margin: 20px;
+          padding: 0px;
           width: 100%;
-          height: 100%;
-          background: pink;
         }
     </style>
   </head>
   <body>
-    <h1 id="question-1"></h1>
-    <h1 id="question-2"></h1>
-    <h1 id="question-3"></h1>
-    <h1 id="question-4"></h1>
-    <h1 id="question-5"></h1>
+    <div class="card container">
+        <div class="card-header">
+          Question 1
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <h2 id="question-1"></h2>
+          </blockquote>
+        </div>
+    </div>
+
+    <div class="card container">
+        <div class="card-header">
+          Question 1
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <h2 id="question-2"></h2>
+          </blockquote>
+        </div>
+    </div>
+
+    <div class="card container">
+        <div class="card-header">
+          Question 3
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <h2 id="question-3"></h2>
+          </blockquote>
+        </div>
+    </div>
+
+    <div class="card container">
+        <div class="card-header">
+          Question 4
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <h2 id="question-4"></h2>
+          </blockquote>
+        </div>
+    </div>
+
+    <div class="card container">
+        <div class="card-header">
+          Question 5
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <h2 id="question-5"></h2>
+          </blockquote>
+        </div>
+    </div>
+
     <script>
         var q1 = ["Tell me about your company.", "What does your company do?", "What kind of company is [company name]?", "Please explain what your company does.", "Tell me about your products and services.", "What does your company specialize in?", "What features do your products / services have?", "Are your products / services [good value / popular / high-tech / high-quality / reliable / user friendly]?"];
         var q2 = ["Tell me about yourself.", "Do you like working for [company name]?", "What are you working on these days?", "When did you start working at [company name]?", "How long have you worked at [company name]?", "How did your career begin?", "What did you do before [company name]?", "How did you get your job?", "Tell me about your work history. (experience)", "What skills and qualifications do you have?", "What made you a good candidate for your job?"];
